--- a/src/views/partials/stylesheets.ejs
+++ b/src/views/partials/stylesheets.ejs
@@ -1,2 +1,1 @@
-<link rel="stylesheet" type="text/css" href="/css/reset.css">
-<link rel="stylesheet" type="text/css" href="/css/styling.css">
+<link rel="stylesheet" type="text/css" href="/css/master.css">
