Added index view functionality, now passes test

--- a/src/views/locations/index.ejs
+++ b/src/views/locations/index.ejs
@@ -1,2 +1,14 @@
 <h1>Fables</h1>
-<h3>See the stories people around the world have been making</h3>
+
+<h3>See the stories people around the world people have been making</h3>
+
+<% for(let i = 0; i < locations.length; i++) { %>
+    <h5><%= locations[i].name %></h5>
+    <h5><%= locations[i].date %></h5>
+    <p><%= locations[i].description %></p>
+    <p><%= locations[i].longitude, locations[i].latitude %></p>
+    
+    <% locations[i].images.map((index, image) => { %>
+        <img><%= image %></img>
+    <% }) %>
+<% } %>
