--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -11,8 +11,10 @@
     <div class="container-fluid">
         <div class="row">
             <%- include partials/navigation %>
-                <%# Main Content Goes Here%>
-                    <%- body %>
+            <%# Main Content Goes Here%>
+            <div class="container-fluid">
+            <%- body %>
+        </div>
         </div>
     </div>
 </body>
