Added index show functionality

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <%- include partials/stylesheets %>
-    <title><%= title %></title>
+        <title>
+            <%= title %>
+        </title>
 </head>
 
 <body>
@@ -13,8 +15,8 @@
             <%- include partials/navigation %>
             <%# Main Content Goes Here%>
             <div class="container-fluid">
-            <%- body %>
-        </div>
+                <%- body %>
+            </div>
         </div>
     </div>
 </body>
