Added to new and edit and started on form, made the locationsTest more robust

--- a/src/views/locations/show.ejs
+++ b/src/views/locations/show.ejs
@@ -4,6 +4,6 @@
 <p><%= location.description %></p>
 <p><%= location.longitude, location.latitude %></p>
 
-<% location.images.map((index, image) => { %>
-    <img><%= image %></img>
+<% location.images.map((image, i) => { %>
+    <img src="<%= image %>" alt="<%= location.name %> Image <%= image + i %>"</img>
 <% }) %>
