--- a/src/views/locations/index.ejs
+++ b/src/views/locations/index.ejs
@@ -6,5 +6,5 @@
     <h5><a href="<%= locations[i]._id %>"><%= locations[i].name %></a></h5>
     <h5><%= locations[i].date %></h5>
     <p><%= locations[i].description %></p>
-    <img src="<%= locations[i].images[0] %>" alt="<% locations[i].name %> Cover Image"</img>
+    <img src="<%= locations[i].images[0] %>" alt="<%= locations[i].name %> Cover Image"</img>
 <% } %>
