Ensured hidden put input only appears on edit

--- a/src/less/master.less
+++ b/src/less/master.less
@@ -1,1 +1,5 @@
-@import '../../node_modules/bootstrap-less/bootstrap/bootstrap.less';
+@import '../node_modules/bootstrap-less/bootstrap/bootstrap.less';
+
+input, textarea {
+    width: 70vw;
+}
