--- a/src/views/partials/form.ejs
+++ b/src/views/partials/form.ejs
@@ -1,9 +1,18 @@
 <form action="/locations" method="post">
-    <input type="hidden" name="_method" value="put">
-    <input type="text" name="name" value="<% location.name %>" required>
-    <input type="date" name="date" value="<% location.date %>" required>
-    <input type="text" name="description" value="<% location.description %>">
-    <input type="number" name="longitude" value="<% location.longitude %>" min="-180" max="180">
-    <input type="number" name="latitude" value="<% location.latitude %>" min="-90" max="90">
-    <input type="text" name="images" value="<% location.name %>" required>
+    <% if(location.id !== "") { %>
+        <input type="hidden" name="_method" value="put">
+    <% } %>
+    <input type="text" name="name" placeholder="Please enter a location" value="<%= location.name %>" required>
+
+    <input type="date" name="date" value="<%= location.date %>" min="1888-01-01" max="2017-02-16" required>
+
+    <textarea name="description" placeholder="Enter a description" value="<%= location.description %>"></textarea>
+
+    <input type="number" name="longitude" placeholder="Longitude" value="<%= location.longitude %>" step="any" min="-180" max="180">
+
+    <input type="number" name="latitude" placeholder="Latitude" value="<%= location.latitude %>" step="any" min="-90" max="90">
+
+    <input type="text" name="images" placeholder="Add images" value="<%= location.images %>" multiple>
+
+    <input type="submit" value="Add Chapter">
 </form>
