--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -8,7 +8,7 @@
 
         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
             <ul class="nav nav-pills">
-                <li role="presentation"><a href="/">Home</a></li>
+                <li role="presentation"><a href="/">Fables</a></li>
                 <li role="presentation"><a href="/sessions/new">Register</a></li>
                 <li role="presentation"><a href="/sessions/show">Login</a></li>
             </ul>
