--- a/src/views/partials/form.ejs
+++ b/src/views/partials/form.ejs
@@ -1,19 +1,37 @@
-<form action="/" method="post">
-    <% if(location.id !== "") { %>
+<form action="/<%= location.id %>" method="post">
+    <% if (location.id !== "") { %>
         <input type="hidden" name="_method" value="put">
     <% } %>
 
-    <input type="text" name="name" placeholder="Please enter a location" value="<%= location.name %>" required>
+    <div class="input-group">
+        <label for="name">Location:</label>
+        <input type="text" class="form-control" name="name" placeholder="Please enter a location" value="<%= location.name %>" required>
+    </div>
 
-    <input type="date" name="date" value="<%= location.date.toISOString().split('T')[0] %>" min="1888-01-01" max="2017-02-16" required>
+    <div class="input-group">
+        <label for="date">Date:</label>
+        <input type="date" class="form-control" name="date" value="<%= location.date.toISOString().split('T')[0] %>" min="1888-01-01" max="2017-02-16" required>
+    </div>
 
-    <textarea name="description" placeholder="Enter a description"><%= location.description %></textarea>
+    <div class="input-group">
+        <label for="ndescriptioname">Description:</label>
+        <textarea name="description" class="form-control" placeholder="Enter a description"><%= location.description %></textarea>
+    </div>
 
-    <input type="number" name="longitude" placeholder="Longitude" value="<%= location.longitude %>" step="any" min="-180" max="180">
+    <div class="input-group">
+        <label for="longitude">Longitude:</label>
+        <input type="number" class="form-control" name="longitude" placeholder="Longitude" value="<%= location.longitude %>" step="any" min="-180" max="180">
+    </div>
 
-    <input type="number" name="latitude" placeholder="Latitude" value="<%= location.latitude %>" step="any" min="-90" max="90">
+    <div class="input-group">
+        <label for="latitude">Latitude:</label>
+        <input type="number" class="form-control" name="latitude" placeholder="Latitude" value="<%= location.latitude %>" step="any" min="-90" max="90">
+    </div>
 
-    <input type="text" name="images" placeholder="Add images" value="<%= location.images %>" multiple>
+    <div class="input-group">
+        <label for="images">Images:</label>
+        <input type="text" class="form-control" name="images" placeholder="Add images" value="<%= location.images %>" multiple>
+    </div>
 
     <input type="submit" value="Add Chapter">
 </form>
