Added user views, fixed some links regarding user

--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
             <ul class="nav nav-pills">
                 <li role="presentation"><a href="/">Fables</a></li>
-                <li role="presentation"><a href="/sessions/new">Register</a></li>
+                <li role="presentation"><a href="/users/new">Register</a></li>
                 <li role="presentation"><a href="/sessions/show">Login</a></li>
             </ul>
         </div>
