Added sessions controller and its new view

--- a/src/views/locations/show.ejs
+++ b/src/views/locations/show.ejs
@@ -1,4 +1,4 @@
-<h1>Chapter</h1>
+<h1><%= title %></h1>
 <h5><%= location.name %></h5>
 <h5><%= location.date %></h5>
 <p><%= location.description %></p>
