--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -10,7 +10,7 @@
             <ul class="nav nav-pills">
                 <li role="presentation"><a href="/">Fables</a></li>
                 <li role="presentation"><a href="/users/new">Register</a></li>
-                <li role="presentation"><a href="/sessions/show">Login</a></li>
+                <li role="presentation"><a href="/sessions/new">Login</a></li>
             </ul>
         </div>
     </div>
