--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -13,6 +13,7 @@
     <div class="container-fluid">
         <div class="row">
             <%- include partials/navigation %>
+            <%- include partials/messages %>
             <%# Main Content Goes Here%>
             <div class="container-fluid">
                 <%- body %>
