--- a/src/less/master.less
+++ b/src/less/master.less
@@ -1,1 +1,8 @@
 @import '../node_modules/bootstrap-less/bootstrap/bootstrap.less';
+
+.non-button {
+    border-style: none;
+    background-color: inherit;
+    padding: inherit;
+    margin: inherit;
+}
