--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -16,7 +16,9 @@
             <%- include partials/messages %>
             <%# Main Content Goes Here%>
             <div class="container-fluid">
-                <%- body %>
+                <div class="col col-sm-12 col-md-12 col-lg-12">
+                    <%- body %>
+                </div>
             </div>
         </div>
     </div>
