--- a/src/views/locations/index.ejs
+++ b/src/views/locations/index.ejs
@@ -3,8 +3,12 @@
 <h3>See the stories people around the world people have been making</h3>
 
 <% for(var i = 0; i < locations.length; i++) { %>
-    <h5><a href="<%= locations[i]._id %>"><%= locations[i].name %></a></h5>
-    <h5><%= locations[i].date %></h5>
-    <p><%= locations[i].description %></p>
-    <img src="<%= locations[i].images[0] %>" alt="<%= locations[i].name %> Cover Image"</img>
+    <div class="thumbnail">
+        <div class="caption">
+            <h5><a href="<%= locations[i]._id %>"><%= locations[i].name %></a></h5>
+            <h5><%= locations[i].date %></h5>
+            <p><%= locations[i].description %></p>
+        </div>
+        <img src="<%= locations[i].images[0] %>" alt="<%= locations[i].name %> Cover Image"</img>
+    </div>
 <% } %>
