Installed cookies sessions and flash messages packages, uncommented that functionality back in, sorted user routes

--- a/src/views/locations/show.ejs
+++ b/src/views/locations/show.ejs
@@ -1,6 +1,6 @@
 <h1><%= title %></h1>
 <h5><%= location.name %></h5>
-<h5><%= location.date %></h5>
+<h5><%= location.date.toDateString() %></h5>
 <p><%= location.description %></p>
 <p><%= location.longitude %>, <%= location.latitude %></p>
 
