--- a/src/views/locations/index.ejs
+++ b/src/views/locations/index.ejs
@@ -1,12 +1,14 @@
-<h1><%= title %></h1>
+<div class="page-header">
+    <h1><%= title %></h1>
 
-<h3>See the stories people around the world people have been making</h3>
+    <h3>See the stories people around the world people have been making</h3>
+</div>
 
 <% for(var i = 0; i < locations.length; i++) { %>
     <div class="thumbnail">
         <div class="caption">
             <h5><a href="<%= locations[i]._id %>"><%= locations[i].name %></a></h5>
-            <h5><%= locations[i].date %></h5>
+            <h5><%= locations[i].date.toDateString() %></h5>
             <p><%= locations[i].description %></p>
         </div>
         <img src="<%= locations[i].images[0] %>" alt="<%= locations[i].name %> Cover Image"</img>
