Added flash messages back in, created session.success var

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -16,7 +16,7 @@
             <%- include partials/messages %>
             <%# Main Content Goes Here%>
             <div class="container-fluid">
-                <div class="col col-sm-12 col-md-12 col-lg-12">
+                <div class="col col-sm-12 col-md-12 col-lg-12 text-center">
                     <%- body %>
                 </div>
             </div>
