--- a/src/views/partials/messages.ejs
+++ b/src/views/partials/messages.ejs
@@ -1,9 +1,9 @@
-<%# if (success) { %>
+<% if (success) { %>
     <div class="col col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 alert alert-success" role="alert">
-        <%# success %>
+        <% success %>
     </div>
-<%# } else if (errors) { %>
+<% } else if (errors) { %>
     <div class="col col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 alert alert-danger" role="alert">
-        <%# errors %>
+        <% errors %>
     </div>
-<%# } %>
+<% } %>
