Minor styling to navigation and form

--- a/src/less/master.less
+++ b/src/less/master.less
@@ -1,8 +1,13 @@
 @import '../node_modules/bootstrap-less/bootstrap/bootstrap.less';
 
-.non-button {
-    border-style: none;
-    background-color: inherit;
-    padding: inherit;
-    margin: inherit;
-}
+// .none-button {
+//     outline: none;
+//     padding: 5px;
+//     border: 0px;
+//     box-sizing: none;
+//     background-color: transparent;
+// }
+//
+// .none-button:hover {
+//
+// }
