--- a/src/views/locations/partials/form.ejs
+++ b/src/views/locations/partials/form.ejs
@@ -1,4 +1,4 @@
-<form action="/<%= location.id %>" method="post">
+<form class="center" action="/<%= location.id %>" method="post">
 
     <div class="input-group">
         <label for="name">Location:</label>
