--- a/src/less/master.less
+++ b/src/less/master.less
@@ -1,13 +1,13 @@
 @import '../node_modules/bootstrap-less/bootstrap/bootstrap.less';
 
-// .none-button {
-//     outline: none;
-//     padding: 5px;
-//     border: 0px;
-//     box-sizing: none;
-//     background-color: transparent;
-// }
-//
-// .none-button:hover {
-//
-// }
+button {
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: inherit;
+        text-decoration: none;
+    }
+}
