--- a/src/views/locations/show.ejs
+++ b/src/views/locations/show.ejs
@@ -8,11 +8,17 @@
     <img src="<%= image %>" alt="<%= location.name %> Image <%= i %>"</img>
 <% }) %>
 
-<button type="button" class="btn btn-default">
-	<a href="/<%= location.id %>/edit">Rewrite Chapter</a>
-</button>
+<div class="container">
+    <div class="col col-sm-6 col-md-6 col-lg-6">
+        <button type="button" class="btn btn-default">
+        	<a href="/<%= location.id %>/edit">Rewrite Chapter</a>
+        </button>
+    </div>
 
-<form action="/<%= location.id %>" method="post">
-	<input type="hidden" name="_method" value="delete">
-	<input type="submit" class="btn btn-default" value="Remove Chapter">
-</form>
+    <div class="col col-sm-6 col-md-6 col-lg-6">
+        <form action="/<%= location.id %>" method="post">
+        	<input type="hidden" name="_method" value="delete">
+        	<input type="submit" class="btn btn-default" value="Remove Chapter">
+        </form>
+    </div<
+</div>
