Added google map functionality to location show view

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <%- include partials/stylesheets %>
-        <title>
-            <%= title %>
-        </title>
+    <%- include partials/scripts %>
+    <title>
+        <%= title %>
+    </title>
 </head>
 
 <body>
