--- a/src/views/locations/index.ejs
+++ b/src/views/locations/index.ejs
@@ -4,7 +4,7 @@
     <h3>See the stories people around the world people have been making</h3>
 </div>
 
-<% for(var i = 0; i < locations.length; i++) { %>
+<% for(let i = 0; i < locations.length; i++) { %>
     <div class="thumbnail">
         <div class="caption">
             <h5><a href="<%= locations[i]._id %>"><%= locations[i].name %></a></h5>
