--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -1,2 +1,4 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script type="text/javascript" src="scripts/googleMap.js"></script>
+<%# <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOuJieqxDGIPhqPY0fCa8vLf0Lbbj7BrY&callback=initMap" type="text/javascript"></script>%>
