--- a/src/less/master.less
+++ b/src/less/master.less
@@ -15,3 +15,13 @@ button {
 #map {
     height: 40vh;
 }
+
+.overlay {
+    position: relative;
+    top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+    z-index: 2;
+}
