--- a/src/views/locations/show.ejs
+++ b/src/views/locations/show.ejs
@@ -1,12 +1,20 @@
-<h1><%= title %></h1>
-<h5><%= location.name %></h5>
-<h5><%= location.date.toDateString() %></h5>
-<p><%= location.description %></p>
+
 <div id="coords" value="<%= location.latitude %>,<%= location.longitude %>"></div>
-<div id="map" class="jumbotron"></div>
+
+<div class="jumbotron">
+    <div id="map"></div>
+    <div class="overlay container">
+        <h1><%= title %></h1>
+        <h5><%= location.name %></h5>
+        <h5><%= location.date.toDateString() %></h5>
+        <p><%= location.description %></p>
+    </div>
+</div>
 
 <% location.images.map((image, i) => { %>
-    <img src="<%= image %>" alt="<%= location.name %> Image <%= i %>"</img>
+    <div class="container">
+        <img class="img-responsive" src="<%= image %>" alt="<%= location.name %> Image <%= i %>"</img>
+    </div>
 <% }) %>
 
 <div class="container">
