Minor styling changes

--- a/src/less/master.less
+++ b/src/less/master.less
@@ -16,12 +16,24 @@ button {
     height: 40vh;
 }
 
+img {
+    max-height: 60vh;
+}
+
 .overlay {
     position: relative;
     top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 10;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
     z-index: 2;
+}
+
+nav {
+    background-image: url('../images/old_map.png');
+}
+
+.thumbnail {
+    background-color: white;
 }
