--- a/src/views/partials/messages.ejs
+++ b/src/views/partials/messages.ejs
@@ -1,9 +1,10 @@
-<% if (success) { %>
+<% if (success.length > 0) { %>
+    <% console.log(success) %>
     <div class="col col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 alert alert-success" role="alert">
-        <% success %>
+        <p><%= success %></p>
     </div>
-<% } else if (errors) { %>
+<% } else if (errors.length > 0) { %>
     <div class="col col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 alert alert-danger" role="alert">
-        <% errors %>
+        <p><%= errors %></p>
     </div>
 <% } %>
