--- a/src/less/master.less
+++ b/src/less/master.less
@@ -26,7 +26,6 @@ img {
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: 10;
     z-index: 2;
 }
 
@@ -36,4 +35,8 @@ nav {
 
 .thumbnail {
     background-color: white;
+}
+
+.centered {
+    margin: 0 auto;
 }
