Added form data and button spacing, removed public from gitignore

--- a/src/less/master.less
+++ b/src/less/master.less
@@ -40,3 +40,14 @@ nav {
 .centered {
     margin: 0 auto;
 }
+
+form {
+    div.input-group {
+        .form-control, label {
+            margin-top: 2vh;
+        }
+    }
+    .btn {
+        margin-top: 2vh;
+    }
+}
