Bootstrap styling, fixed containers and columns for forms

--- a/src/views/locations/partials/form.ejs
+++ b/src/views/locations/partials/form.ejs
@@ -40,5 +40,5 @@
 
     <input type="hidden" name="user" value="<%= locals.user.id %>">
 
-    <input type="submit" class="btn btn-default" value="Add Chapter">
+    <input type="submit" class="btn btn-default btn-lg" value="Add Chapter">
 </form>
