--- a/src/views/users/partials/form.ejs
+++ b/src/views/users/partials/form.ejs
@@ -22,9 +22,9 @@
 
     <% if (user.id !== "") { %>
         <input type="hidden" name="_method" value="put">
-        <input type="submit" class="btn btn-default" value="Update Profile">
+        <input type="submit" class="btn btn-default btn-lg" value="Update Profile">
     <% } else { %>
-        <input type="submit" class="btn btn-default" value="Register">
+        <input type="submit" class="btn btn-default btn-lg" value="Register">
     <% } %>
 
 </form>
