--- a/src/less/master.less
+++ b/src/less/master.less
@@ -20,13 +20,15 @@ img {
     max-height: 60vh;
 }
 
-.overlay {
-    position: relative;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 2;
+.jumbotron {
+    .overlay {
+        position: relative;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 2;
+    }
 }
 
 nav {
