--- a/src/views/locations/show.ejs
+++ b/src/views/locations/show.ejs
@@ -19,7 +19,7 @@
 
 <div class="container">
     <div class="col col-sm-6 col-md-6 col-lg-6">
-        <button type="button" class="btn btn-default">
+        <button type="button" class="btn btn-default btn-lg">
         	<a href="/<%= location.id %>/edit">Rewrite Chapter</a>
         </button>
     </div>
@@ -27,7 +27,7 @@
     <div class="col col-sm-6 col-md-6 col-lg-6">
         <form action="/<%= location.id %>" method="post">
         	<input type="hidden" name="_method" value="delete">
-        	<input type="submit" class="btn btn-default" value="Remove Chapter">
+        	<input type="submit" class="btn btn-default btn-lg" value="Remove Chapter">
         </form>
     </div<
 </div>
