Added app logo and increased nav height

--- a/src/less/master.less
+++ b/src/less/master.less
@@ -33,6 +33,15 @@ img {
 
 nav {
     background-image: url('../images/old_map.png');
+
+    .navbar-brand {
+        padding: 5%;
+
+        .logo {
+            height: 100%;
+            width: auto;
+        }
+    }
 }
 
 .thumbnail {
