--- a/public/css/master.css
+++ b/public/css/master.css
@@ -4029,7 +4029,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar {
   position: relative;
-  min-height: 50px;
+  min-height: 10vh;
   margin-bottom: 20px;
   border: 1px solid transparent;
 }
@@ -4136,10 +4136,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  padding: 15px 15px;
+  padding: -5vh 15px;
   font-size: 18px;
   line-height: 20px;
-  height: 50px;
+  height: 10vh;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -4159,8 +4159,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   float: right;
   margin-right: 15px;
   padding: 9px 10px;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: -12vh;
+  margin-bottom: -12vh;
   background-color: transparent;
   background-image: none;
   border: 1px solid transparent;
@@ -4184,7 +4184,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-nav {
-  margin: 7.5px -15px;
+  margin: -2.5vh -15px;
 }
 .navbar-nav > li > a {
   padding-top: 10px;
@@ -4222,8 +4222,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     float: left;
   }
   .navbar-nav > li > a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: -5vh;
+    padding-bottom: -5vh;
   }
 }
 .navbar-form {
@@ -4234,8 +4234,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: -12vh;
+  margin-bottom: -12vh;
 }
 @media (min-width: 768px) {
   .navbar-form .form-group {
@@ -4320,20 +4320,20 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-bottom-left-radius: 0;
 }
 .navbar-btn {
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: -12vh;
+  margin-bottom: -12vh;
 }
 .navbar-btn.btn-sm {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: -10vh;
+  margin-bottom: -10vh;
 }
 .navbar-btn.btn-xs {
-  margin-top: 14px;
-  margin-bottom: 14px;
+  margin-top: -6vh;
+  margin-bottom: -6vh;
 }
 .navbar-text {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: -5vh;
+  margin-bottom: -5vh;
 }
 @media (min-width: 768px) {
   .navbar-text {
@@ -6553,6 +6553,13 @@ img {
 }
 nav {
   background-image: url('../images/old_map.png');
+}
+nav .navbar-brand {
+  padding: 5%;
+}
+nav .navbar-brand .logo {
+  height: 100%;
+  width: auto;
 }
 .thumbnail {
   background-color: white;
