--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="/">
-                <img class="logo" alt="Wayfarers Logo" src="images/wayfarers_logo_white.png">
+                <img class="logo" alt="Wayfarers Logo" src="../images/wayfarers_logo_white.png">
             </a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-menu" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
