--- a/public/css/master.css
+++ b/public/css/master.css
@@ -4079,7 +4079,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-fixed-top .navbar-collapse,
 .navbar-fixed-bottom .navbar-collapse {
-  max-height: 340px;
+  max-height: 6.5vh;
 }
 @media (max-device-width: 480px) and (orientation: landscape) {
   .navbar-fixed-top .navbar-collapse,
@@ -6537,13 +6537,13 @@ button a:hover {
   color: inherit;
   text-decoration: none;
 }
-#map {
+div#map {
   height: 40vh;
 }
 img {
   max-height: 60vh;
 }
-.jumbotron .overlay {
+.jumbotron div.overlay {
   position: relative;
   top: 0;
   left: 0;
@@ -6561,7 +6561,7 @@ nav .navbar-brand .logo {
   height: 100%;
   width: auto;
 }
-.thumbnail {
+div.thumbnail {
   background-color: white;
 }
 .centered {
