--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
@@ -1060,7 +1061,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
@@ -5792,7 +5793,7 @@ button.close {
   z-index: 1070;
   display: block;
   visibility: visible;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.4;
@@ -5899,7 +5900,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.42857143;
@@ -6543,22 +6544,36 @@ div#map {
 img {
   max-height: 60vh;
 }
-.jumbotron div.overlay {
+div.mapJumbotron {
   position: relative;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
+  padding: 0;
+}
+div.mapJumbotron div {
+  z-index: 1;
+}
+div.mapJumbotron div.overlay {
+  position: absolute;
+  top: 20%;
+  left: 35%;
+  width: 25%;
   z-index: 2;
+  background-color: rgba(255, 255, 255, 0.4);
+}
+div.mapJumbotron div.overlay.collapsed {
+  position: relative;
+  top: inherit;
+  left: inherit;
+  width: inherit;
+  background-color: inherit;
 }
 nav {
   background-image: url('../images/old_map.png');
 }
 nav .navbar-brand {
-  padding: 5%;
+  padding: 1vh;
 }
 nav .navbar-brand .logo {
-  height: 100%;
+  height: 8vh;
   width: auto;
 }
 div.thumbnail {
