--- a/public/css/master.css
+++ b/public/css/master.css
@@ -4818,7 +4818,7 @@ a.badge:focus {
   padding: 30px 15px;
   margin-bottom: 30px;
   color: inherit;
-  background-color: #eeeeee;
+  background-color: white;
 }
 .jumbotron h1,
 .jumbotron .h1 {
@@ -4830,7 +4830,7 @@ a.badge:focus {
   font-weight: 200;
 }
 .jumbotron > hr {
-  border-top-color: #d5d5d5;
+  border-top-color: #e6e6e6;
 }
 .container .jumbotron,
 .container-fluid .jumbotron {
