--- a/src/less/master.less
+++ b/src/less/master.less
@@ -23,8 +23,7 @@ img {
 
 div.mapJumbotron {
     position: relative;
-    padding: 0; !important
-
+    padding: 0;
 
     div {
         z-index: 1;
