--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -18,11 +18,11 @@
                 <%- include partials/messages %>
             </div>
         </div>
-        
+
         <div class="container-fluid">
             <div class="row">
                 <%# Main Content Goes Here%>
-                <div class="col col-sm-12 col-md-12 col-lg-12 text-center">
+                <div class="col col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
                     <%- body %>
                 </div>
             </div>
