--- a/src/views/locations/index.ejs
+++ b/src/views/locations/index.ejs
@@ -5,7 +5,7 @@
 </div>
 
 <% for(let i = 0; i < locations.length; i++) { %>
-    <div class="thumbnail col col-sm-12 col-md-6 col-lg-4">
+    <div class="thumbnail col col-xs-12 col-sm-12 col-md-6 col-lg-4">
         <div class="caption">
             <h5><a href="<%= locations[i]._id %>"><%= locations[i].name %></a></h5>
             <h5><%= locations[i].date.toDateString() %></h5>
