--- a/src/views/partials/messages.ejs
+++ b/src/views/partials/messages.ejs
@@ -1,12 +1,12 @@
 <% if (success.length > 0) { %>
-    <div class="col col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 alert alert-success alert-dismissible" role="alert">
+    <div class="col col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" aria-label="Close" data-dismiss="alert">
             <span aria-hidden="true">&times;</span>
         </button>
         <p><%= success %></p>
     </div>
 <% } else if (errors.length > 0) { %>
-    <div class="col col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 alert alert-danger alert-dismissible" role="alert">
+    <div class="col col-xs-10 col-xs-offset-1 col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 alert alert-danger alert-dismissible" role="alert">
         <button type="button" class="close" aria-label="Close" data-dismiss="alert">
             <span aria-hidden="true">&times;</span>
         </button>
