--- a/public/css/master.css
+++ b/public/css/master.css
@@ -6559,7 +6559,7 @@ div.mapJumbotron div.overlay {
   z-index: 2;
   background-color: rgba(255, 255, 255, 0.4);
 }
-div.mapJumbotron div.overlay.collapsed {
+div.mapJumbotron div.collapsed {
   position: relative;
   top: inherit;
   left: inherit;
