--- a/src/less/master.less
+++ b/src/less/master.less
@@ -39,7 +39,7 @@ div.mapJumbotron {
         background-color: rgba(255,255,255, 0.4);
     }
 
-    div.overlay.collapsed {
+    div.collapsed {
         position: relative;;
         top: inherit;
         left: inherit;
